# mp3rgain

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REPLY_DRAFT.md
.claude/: rules.md
.github/workflows/: ci.yml  codeql.yml  release.yml  test-deb.yml
docs/: COMPARISON.md  compatibility-report.md  roadmap.md  security.md  use-cases.md
docs/debian/: ITP-template.txt  maintainer-contact-template.txt
docs/man/: mp3rgain.1
mp3rgui/: Cargo.toml  build.rs
mp3rgui/src/: app.rs  main.rs
mp3rgui/src/ui/: menu.rs  mod.rs  status.rs  table.rs  toolbar.rs
scripts/: compatibility-test.sh
src/: lib.rs  main.rs  mp4meta.rs  replaygain.rs
