[package]
name = "mp3rgain"
version = "0.2.0"
edition = "2021"
authors = ["Masanari Higashi <M-Igashi@users.noreply.github.com>"]
description = "Lossless MP3 volume adjustment - a modern mp3gain replacement written in Rust"
license = "MIT"
repository = "https://github.com/M-Igashi/mp3rgain"
homepage = "https://github.com/M-Igashi/mp3rgain"
readme = "README.md"
keywords = ["mp3", "audio", "gain", "volume", "lossless"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"

[lib]
name = "mp3rgain"
path = "src/lib.rs"

[[bin]]
name = "mp3rgain"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
