[package]
name = "mp3rgain"
version = "1.2.7"
edition = "2021"
authors = ["Jesse Pinkman <M-Igashi@users.noreply.github.com>"]
description = "Lossless MP3 volume adjustment - a modern mp3gain replacement written in Rust"
license = "MIT"
repository = "https://github.com/M-Igashi/mp3rgain"
homepage = "https://github.com/M-Igashi/mp3rgain"
readme = "README.md"
keywords = ["mp3", "audio", "gain", "volume", "lossless"]
categories = ["multimedia::audio", "command-line-utilities"]

[features]
default = ["replaygain"]
replaygain = ["symphonia"]
aac = ["symphonia-aac"]
symphonia-aac = ["symphonia"]

[dependencies]
anyhow = "1.0"
colored = "2.0"
symphonia = { version = "0.5", optional = true, default-features = false, features = ["mp3", "aac", "isomp4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"

[lib]
name = "mp3rgain"
path = "src/lib.rs"

[[bin]]
name = "mp3rgain"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
