[package]
name = "mp3rgui"
version = "1.2.0"
edition = "2021"
authors = ["Masanari Higashi <M-Igashi@users.noreply.github.com>"]
description = "GUI application for mp3rgain - lossless MP3 volume adjustment"
license = "MIT"
repository = "https://github.com/M-Igashi/mp3rgain"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
mp3rgain = { path = ".." }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
