[package]
name = "mp3rgui"
version = "1.2.0"
edition = "2021"
authors = ["Masanari Higashi <M-Igashi@users.noreply.github.com>"]
description = "GUI application for mp3rgain - lossless MP3 volume adjustment"
license = "MIT"
repository = "https://github.com/M-Igashi/mp3rgain"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["png"] }
mp3rgain = { path = ".." }

# Linux: use GTK3 backend to avoid ashpd/xdg-portal compilation issues
[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

# macOS/Windows: use native file dialogs
[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.15"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
